crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__boolean__effectful_subject.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
assertion_line: 22
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Bool (trace "subject" in true) of
  True -> 42
  False -> error
--- unoptimized UPLC
(program 1.1.0
  (case
    (force
      [[(force (builtin trace)) (con string "subject")] (delay (con bool True))])
    (error)
    (con integer 42)))
--- optimized Core
let anf#1 : bool = trace "subject" in true in
case@Bool anf#1 of
  True -> 42
  False -> error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam anf_2 (case anf_2 (error) (con integer 42)))
      (force [[builtin_3 (con string "subject")] (delay (con bool True))])])
    (force (builtin trace))])
--- isolated pass
--- core before
case@Bool (trace "subject" in true) of
  True -> 42
  False -> error
--- uplc before
(program 1.1.0
  (case
    (force
      [[(force (builtin trace)) (con string "subject")] (delay (con bool True))])
    (error)
    (con integer 42)))
--- core after
case@Bool (trace "subject" in true) of
  True -> 42
  False -> error
--- uplc after
(program 1.1.0
  (case
    (force
      [[(force (builtin trace)) (con string "subject")] (delay (con bool True))])
    (error)
    (con integer 42)))
--- result
(con integer 42)
--- logs
["subject"]
