crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__boolean__missing.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
assertion_line: 22
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Bool true of
  False -> 0
--- unoptimized UPLC
(program 1.1.0 (case (con bool True) (con integer 0) (error)))
--- optimized Core
case@Bool true of
  False -> 0
--- optimized UPLC
(program 1.1.0 (case (con bool True) (con integer 0) (error)))
--- isolated pass
--- core before
case@Bool true of
  False -> 0
--- uplc before
(program 1.1.0 (case (con bool True) (con integer 0) (error)))
--- core after
case@Bool true of
  False -> 0
--- uplc after
(program 1.1.0 (case (con bool True) (con integer 0) (error)))
--- result
error: ExplicitErrorTerm
--- logs
[]
