crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__boolean__returned_delay.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
assertion_line: 22
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
force (case@Bool true of
  True -> delay (trace "forced" in 42)
  False -> error)
--- unoptimized UPLC
(program 1.1.0
  (force
    (case
      (con bool True)
      (error)
      (delay
        (force
          [[(force (builtin trace)) (con string "forced")] (delay (con integer 42))])))))
--- optimized Core
trace "forced" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "forced")] (delay (con integer 42))]))
    (force (builtin trace))])
--- isolated pass
--- core before
force (case@Bool true of
  True -> delay (trace "forced" in 42)
  False -> error)
--- uplc before
(program 1.1.0
  (force
    (case
      (con bool True)
      (error)
      (delay
        (force
          [[(force (builtin trace)) (con string "forced")] (delay (con integer 42))])))))
--- core after
force (delay (trace "forced" in 42))
--- uplc after
(program 1.1.0
  (force
    (delay
      (force
        [[(force (builtin trace)) (con string "forced")] (delay (con integer 42))]))))
--- result
(con integer 42)
--- logs
["forced"]
