crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__boolean__returned_function.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
assertion_line: 22
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
(case@Bool true of
  True -> \p#1 : int -> trace "called" in p#1
  False -> error) 42
--- unoptimized UPLC
(program 1.1.0
  [(case
    (con bool True)
    (error)
    (lam p_1 (force [[(force (builtin trace)) (con string "called")] (delay p_1)])))
    (con integer 42)])
--- optimized Core
trace "called" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "called")] (delay (con integer 42))]))
    (force (builtin trace))])
--- isolated pass
--- core before
(case@Bool true of
  True -> \p#1 : int -> trace "called" in p#1
  False -> error) 42
--- uplc before
(program 1.1.0
  [(case
    (con bool True)
    (error)
    (lam p_1 (force [[(force (builtin trace)) (con string "called")] (delay p_1)])))
    (con integer 42)])
--- core after
(\p#1 : int -> trace "called" in p#1) 42
--- uplc after
(program 1.1.0
  [(lam p_1 (force [[(force (builtin trace)) (con string "called")] (delay p_1)]))
    (con integer 42)])
--- result
(con integer 42)
--- logs
["called"]
